# Shadow-Hunting

./: .fieldlink.json  .gitignore  CLAUDE.md  LICENSE  PROJECTS.md  README.md  Tutorial.md  bioelectric_protocol.py  coupling_framework.py  pyproject.toml  requirements.txt  shadow_data_mining.py
Examples/: brain_energy_shadow.py  happy_curiosity_test.py  photosynthesis_shadow.py  planaria_dna_shadow.py
examples/: __init__.py  brain_energy_shadow.py  happy_curiosity_test.py  photosynthesis_shadow.py  planaria_dna_shadow.py
shadow_hunting/: __init__.py  bioelectric_protocol.py  coupling_framework.py  shadow_data_mining.py
shadow_hunting/knowledge/: AGENTS.md  README.md  __init__.py  ai_blind_spots.py  ai_brief.py  ai_claim_decomposer.py  ai_critical_thinking.py  ai_frame_flip.py  ai_provenance.py  ai_self_scope.py  application_builder.py  edge_explorer.py  interactive_navigator.py  knowledge_liberation.py  recontextualizer.py  scope_mapper.py  shadow_catalog.py
shadow_hunting/tools/: __init__.py  chordal_dimensions.py  explorer.py  powers_and_roots.py  root_decimals.py
