[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "shadow-hunting"
version = "0.1.0"
description = "Finding geometric coupling in systems science calls inefficient"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "JinnZ2 and collaborators" },
]
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["shadow_hunting*"]
